--- a/base.css
+++ b/base.css
@@ -225,9 +225,17 @@ a:hover,a:focus {color:#000;outline:none;}
 }
 
 /* Loader CSS */
-.loading{display:flex;align-items:center;justify-content:center;position:fixed;top:0;right:0;bottom:0;left:0;z-index:100; background:#000; /*background-image: url(../download\ \(2\).gif);*/ opacity:0;transition:0.5s;}
-.loading::before { content: ''; position: fixed; top: -100%; left: -50%; width: 300%; height: 300%; background-image: url(./assets/noiseW.png); opacity: 1; animation: grain 3s steps(10) infinite; }
+.loading{display:flex;align-items:center;justify-content:center;position:fixed;top:0;right:0;bottom:0;left:0;z-index:100; background:#ffa666; opacity:0; transition:0.5s;}
+.loading::before { content: ''; position: fixed; top: -100%; left: -50%; width: 300%; height: 300%; background-image: url(./assets/noise.png); opacity: 1; animation: grain 3s steps(10) infinite; }
 @keyframes grain { 0%, 100% { transform: translate(0, 0); } 10% { transform: translate(-5%, -10%); } 20% { transform: translate(-15%, 5%); } 30% { transform: translate(7%, -25%); } 40% { transform: translate(-5%, 25%); } 50% { transform: translate(-15%, 10%); } 60% { transform: translate(15%, 0%); } 70% { transform: translate(0%, 15%); } 80% { transform: translate(3%, 35%); } 90% { transform: translate(-10%, 10%); } }
 .before-load .loading{opacity:1;}
-.loading-circle{width:500px; height:500px;animation:loading-spin 2s infinite; object-fit: cover; mix-blend-mode: screen;}
-.loading-circle img{width:100%;height:100%;}
+.backp { position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); font-family: 'Morbid Bones Brush Slant DEMO','LEMONMILK-Regular','Roboto',sans-serif; font-size: 7rem; cursor: pointer; width: fit-content; filter: url(#minFilter); }
+.backp::before { content: ''; position: absolute; z-index: 1; top: 45%; bottom: 45%; left: -0.25em; right: -0.25em; background-color: #eee; border: 3px solid #000; filter: url(#minFilter); animation: fullSweep 2s ease-in-out infinite; }
+@keyframes fullSweep {
+  0% { transform-origin: left; transform: scaleX(0); }
+  33.333% { transform-origin: left; transform: scaleX(1); }
+  33.334% { transform-origin: right; transform: scaleX(1); }
+  66.666% { transform-origin: right; transform: scaleX(0); }
+  100% { transform-origin: right; transform: scaleX(0); }
+}
+@media (max-width:500px) { .backp { font-size: 3rem; } .backp::before {top: 33%; bottom: 33%;}}
