--- a/base.css
+++ b/base.css
@@ -210,14 +210,27 @@ a {text-decoration:none;color:#111;outline:none;}
 a:hover,a:focus {color:#000;outline:none;}
 
 @media (max-width:500px) {
+  .col {width: 90vw; height: 50%; }
+  .menu-wrap { top:6em; }
   .marquee span,.menu__item-link {font-size:5vw;line-height:2;}
   .logo a,.menu-logo a {font-size:44px;}
-  .col-2 {position:absolute;width:100%;}
-  .header {left:50%;transform:translateX(-50%);width:300px;bottom:15vw;}
-  .header h1 {font-size:66px;height:120px;}
+  .col-1 {position: absolute; bottom:7.5%; left:50%; transform:translateX(-50%); padding:0em 0em 0em 0em;}
+  .col-2 {height: fit-content; display: flex; flex-direction: column; justify-content: center; align-items: center; gap: 5vh; position: absolute; bottom:45%; left:50%; transform:translate(-50%,50%); padding:0em 0em 0em 0em;}
+  .header {position: relative; height: fit-content;}
+  .header h1 {font-size:66px;height:66px;}
   .socials {gap:4em;flex-direction:row;}
-  .video-wrapper {width:333px;}
+  .video-wrapper {width:100%;}
   .video-glitch-wrapper { width: 90vw; aspect-ratio: 9/16; top: 45%;}
+}
+
+@media (max-width: 500px) and (max-height: 800px) {
+  .col {width: 80vw; height: 50%; }
+  .menu-wrap { top:4em; }
+  .marquee span,.menu__item-link {font-size:4vw;line-height:2;}
+  .logo a,.menu-logo a {font-size:33px;}
+  .menu-toggle{top: 0%;}
+  .col-1 {bottom:5%;}
+  .header {display: none;}
 }
 
 @media only screen and (max-device-width: 500px){
