--- a/Contact-Form/CT/styles.css
+++ b/Contact-Form/CT/styles.css
@@ -252,6 +252,31 @@ input[type="checkbox" i] { cursor: pointer; }
   font-size: 12px;
 }
 
+/* Hide the default checkbox */
+.custom-checkbox {
+  appearance: none;
+  -webkit-appearance: none;
+  background-color: #fff;
+  border: 2px solid #000;
+  width: 20px;
+  height: 15px;
+  cursor: pointer;
+  position: relative;
+}
+
+/* Show a black checkmark when checked */
+.custom-checkbox:checked::before {
+  content: '';
+  position: absolute;
+  bottom: 0px;
+  left: 2px;
+  width: 6px;
+  height: 12px;
+  border: solid #000;
+  border-width: 0 3px 3px 0;
+  transform: rotate(45deg);
+}
+
 form button {
   font-size: 2rem;
   color: #eee;
@@ -317,12 +342,18 @@ form button:hover::before{transform:scaleX(1);transform-origin:center left;}
   input[type="text"] {
     width: 88vw;
   }
+
+  input[type="text"], input[type="email"] {
+    width: 88vw; 
+  }
   
   textarea#message {
     width: 88vw;
   }
+}
 
-  input[type="text"], input[type="email"] {
-  width: 88vw;
-  }
+@media (max-width: 500px) and (max-height: 800px) {
+    .formBG {height: 80vh;}
+    form {height: 80vh;}
+    form button {position: absolute; left: 50%; transform: translate(-50%, 0%); bottom: 0; width: 100%;}
 }
