--- a/Contact-Form/CT/styles.css
+++ b/Contact-Form/CT/styles.css
@@ -272,10 +272,11 @@ input[type="checkbox" i] { cursor: pointer; }
   left: 2px;
   width: 6px;
   height: 12px;
-  border: solid #000;
+  border: solid #ffffff;
   border-width: 0 3px 3px 0;
   transform: rotate(45deg);
 }
+.custom-checkbox:checked {background-color: #000000; border: 2px solid #000000;}
 
 form button {
   font-size: 2rem;
