--- a/studio/css/LP.css
+++ b/studio/css/LP.css
@@ -13,17 +13,17 @@ img { width: 100%; height: 100%; object-fit: cover; backface-visibility: hidden;
 .container { display: flex; align-items: center; justify-content: center; position: relative; width: 100vw; height: 100vh; overflow: hidden; }
 .gallery-container { position: relative; width: 100%; height: 100%; display: flex; justify-content: center; align-items: center; transform-style: preserve-3d; perspective: 2000px; will-change: transform; }
 .marqueeLP { position: absolute; top: 0; width: 100vw; height: 200px; overflow: hidden; color: #fff; -webkit-text-stroke: 3px #000; z-index: 999; display: none; z-index: 0; }
-.marquee-content-LP { display: inline-block; white-space: nowrap; padding-left: 100%; animation: scroll-left 30s linear infinite; font-size: 200px; font-family: 'LEMONMILK-Regular', sans-serif; line-height: 200px; letter-spacing: 0.1em; filter: url(#pDistort-max); }
+.marquee-content-LP { display: inline-block; white-space: nowrap; padding-left: 100%; animation: scroll-left 30s linear infinite; font-size: 200px; font-family: 'LEMONMILK-Regular', sans-serif; line-height: 200px; letter-spacing: 0.1em; filter: url(#pDistort-max); user-select: none; -webkit-user-select: none;/* Safari */ -moz-user-select: none;/* Firefox */ -ms-user-select: none;/* IE/Edge */}
 @keyframes scroll-left { 0% { transform: translateX(0%); } 100% { transform: translateX(-100%); } }
 .gallery { position: relative; width: 600px; height: 600px; display: flex; justify-content: center; align-items: center; transform-origin: center; will-change: transform; z-index: 2; }
-.card { position: absolute; width: 45px; height: 60px; border-radius: 0px; transform-origin: center; will-change: transform; transform-style: preserve-3d; backface-visibility: visible; object-fit: cover; overflow: hidden; border: 2px solid transparent; box-shadow: 0 0 0 1px #000; backdrop-filter: blur(8px); cursor: pointer;}
+.card { position: absolute; width: 45px; height: 60px; border-radius: 0px; transform-origin: center; will-change: transform; transform-style: preserve-3d; backface-visibility: visible; object-fit: cover; overflow: hidden; border: 2px solid transparent; box-shadow: 0 0 0 1px #000; backdrop-filter: blur(8px); cursor: pointer; user-select: none; -webkit-user-select: none;/* Safari */ -moz-user-select: none;/* Firefox */ -ms-user-select: none;/* IE/Edge */}
 .gallery-container .logo { position: absolute; top: 50%; left: 50%; width: 500px; height: auto; transform: translate(-50%, -50%); pointer-events: none; will-change: transform, filter; }
 .lg { display: flex; flex-direction: column; align-items: center; gap: 10px; color: #000; }
 .lgI { font-size: 5vw; font-weight: 800; font-family: 'LEMONMILK-Regular', 'Roboto', sans-serif; letter-spacing: -0.05em; filter: url(#text-distortion-max); }
 .lgIsub { font-size: 1vw; font-family: 'LEMONMILK-Regular', 'Roboto', sans-serif; letter-spacing: 0.5em; opacity: 0.75; filter: url(#pDistort); }
 .logo, .card { opacity: 0; }
 .title-container { position: absolute; top: 20%; left: 50%; transform: translate(-50%, -50%); width: 100%; height: 42px; clip-path: polygon(0 0, 100% 0, 100% 100%, 0% 100%); z-index: 1; }
-.title-container p { position: absolute; width: 100%; text-align: center; font-size: 36px; letter-spacing: -0.05rem; filter: url(#pDistort); }
+.title-container p { position: absolute; width: 100%; text-align: center; font-size: 36px; letter-spacing: -0.05rem; filter: url(#pDistort); user-select: none; -webkit-user-select: none;/* Safari */ -moz-user-select: none;/* Firefox */ -ms-user-select: none;/* IE/Edge */}
 .word { position: relative; display: inline-block; will-change: transform; }
-.we { color: #000; position: absolute; bottom: 5%; width: 100%; text-align: center; font-size: 36px; letter-spacing: -0.05rem; filter: url(#pDistort); }
+.we { color: #000; position: absolute; bottom: 5%; width: 100%; text-align: center; font-size: 36px; letter-spacing: -0.05rem; filter: url(#pDistort); user-select: none; -webkit-user-select: none;/* Safari */ -moz-user-select: none;/* Firefox */ -ms-user-select: none;/* IE/Edge */}
 @media (max-width: 500px) { .lgI { font-size: 15vw; } .lgIsub { font-size: 5vw; letter-spacing: 2px;} .we { font-size: 20px; }}
