--- a/studio/css/base.css
+++ b/studio/css/base.css
@@ -12,11 +12,11 @@ a:hover{text-decoration:none;color:#111;outline:none;}
 .frame{font-size:12px;font-weight:bold;letter-spacing:1px;padding:2rem;position:relative;display:flex;justify-content:space-between;align-items:center;}
 .frame #cdawrap{justify-self:start;}
 .frame a{pointer-events:auto;}
-.frame__title,.frame__back,.frame__archive,.frame__sub,.frame__github,.frame__tags,.frame__hire{grid-area:inherit;}
+.frame__title{user-select: none; -webkit-user-select: none;/* Safari */ -moz-user-select: none;/* Firefox */ -ms-user-select: none;/* IE/Edge */}
 .frame__demos{grid-area:demos;display:flex;gap:1rem;}
 .marquee{position:absolute;top:20%;width:100%;margin:0 auto;white-space:nowrap;overflow:hidden;z-index:3;}
 .marquee-content{display:flex;align-items:center;}
-.marquee span{font-family:'LEMONMILK-Regular','Roboto',sans-serif;font-weight:400;letter-spacing:-10px;color:#111;background-color:transparent;mix-blend-mode:normal !important;font-size:12em;text-transform:uppercase;display:inline-block;padding-left:-10%;animation:marquee-animation 80s linear infinite;filter:url(#minFilter);display:flex;align-items:center;}
+.marquee span{font-family:'LEMONMILK-Regular','Roboto',sans-serif;font-weight:400;letter-spacing:-10px;color:#111;background-color:transparent;mix-blend-mode:normal !important;font-size:12em;text-transform:uppercase;display:inline-block;padding-left:-10%;animation:marquee-animation 80s linear infinite;filter:url(#minFilter);display:flex;align-items:center; user-select: none; -webkit-user-select: none;/* Safari */ -moz-user-select: none;/* Firefox */ -ms-user-select: none;/* IE/Edge */}
 @keyframes marquee-animation{0%{transform:translateX(0%);}100%{transform:translateX(-50%);}}
 .marquee-img{position:relative;top:0;width:200px;height:200px;object-fit:cover;vertical-align:middle; display: flex; justify-content: center; align-items: center; border:4px solid transparent;box-shadow:0 0 0 2px #000;backdrop-filter:blur(8px);border-radius:0px;}
 .marquee-img img{ width: 100%; height: 100%;}
