--- a/studio/css/styles.css
+++ b/studio/css/styles.css
@@ -1,4 +1,4 @@
-@font-face{font-family:'LEMONMILK-Regular';src:url('../assets/LEMONMILK-Regular.otf') format('opentype');font-display:swap;}
+@font-face{font-family:'LEMONMILK-Regular';src:url('../../assets/LEMONMILK-Regular.otf') format('opentype');font-display:swap;}
 
 @keyframes grain{0%,100%{transform:translate(0,0);}10%{transform:translate(-5%,-10%);}20%{transform:translate(-15%,5%);}30%{transform:translate(7%,-25%);}40%{transform:translate(-5%,25%);}50%{transform:translate(-15%,10%);}60%{transform:translate(15%,0%);}70%{transform:translate(0%,15%);}80%{transform:translate(3%,35%);}90%{transform:translate(-10%,10%);}}
 
@@ -7,14 +7,14 @@ section{position:relative;width:100vw; min-height:100vh; overflow-x: hidden !imp
 /* S 02 */
 
 .inversion-lens::before{content:'';position:fixed;top:-100%;left:-50%;width:300%;height:300%;background-image:url(../assets/noise.png);opacity:1;animation:grain 8s steps(10) infinite;}
-.inversion-lens{position:absolute;top:50%;right:3vw;transform:translate(0%,-50%);width:33vw;aspect-ratio:1/1;object-fit:cover;overflow:hidden;border:4px solid transparent;box-shadow:0 0 0 2px #000;backdrop-filter:blur(8px);border-radius:0px;}
-.inversion-lens img{display:none;}
-.rss{display:flex;justify-content:center;align-items:center;align-self:center;text-align:center;flex-wrap:wrap;width:100%;height:100%;position:absolute;top:50%;left:50%;transform:translate(-50%,-50%);font-family:'LEMONMILK-Regular';color:#000;font-size:1.7rem;filter:url(#minFilter);cursor:pointer;z-index:1;mix-blend-mode:hard-light;}
+.inversion-lens{position:absolute;top:50%;right:3vw;transform:translate(0%,-50%);width:33vw;aspect-ratio:1/1;object-fit:cover;overflow:hidden;border:4px solid transparent;box-shadow:0 0 0 2px #000;backdrop-filter:blur(8px);border-radius:0px; user-select: none; -webkit-user-select: none;/* Safari */ -moz-user-select: none;/* Firefox */ -ms-user-select: none;/* IE/Edge */ -webkit-user-drag: none; /* Prevent drag on WebKit browsers */}
+.inversion-lens img{display:none; user-select: none; -webkit-user-select: none;/* Safari */ -moz-user-select: none;/* Firefox */ -ms-user-select: none;/* IE/Edge */}
+.rss{display:flex;justify-content:center;align-items:center;align-self:center;text-align:center;flex-wrap:wrap;width:100%;height:100%;position:absolute;top:50%;left:50%;transform:translate(-50%,-50%);font-family:'LEMONMILK-Regular';color:#000;font-size:1.7rem;filter:url(#minFilter);cursor:pointer;z-index:1;mix-blend-mode:hard-light; user-select: none; -webkit-user-select: none; /* Safari */ -moz-user-select: none;    /* Firefox */ -ms-user-select: none;     /* IE/Edge */ -webkit-user-drag: none; /* Prevent drag on WebKit browsers */}
 
 .rs{position:absolute;top:50%;left:50%;transform:translate(-50%,-50%);display:flex;flex-direction:column; align-items: center; justify-content:space-between;height:50vh;width:33vw;font-family:'LEMONMILK-Regular';color:#111;}
-.rsI{ position: relative; height:20%;display:flex;justify-content:center;align-items:center; flex-direction: column; font-size:7rem;filter:url(#imgFilter); opacity:1;}
-.rsIsub{ font-size: 2rem; filter:url(#minFilter); text-align: center;}
-.rsII{ font-size: 2vw; filter:url(#minFilter); text-align: center;}
+.rsI{ position: relative; height:20%;display:flex;justify-content:center;align-items:center; flex-direction: column; font-size:7rem;filter:url(#imgFilter); opacity:1; user-select: none; -webkit-user-select: none;/* Safari */ -moz-user-select: none;/* Firefox */ -ms-user-select: none;/* IE/Edge */}
+.rsIsub{ font-size: 2rem; filter:url(#minFilter); text-align: center; user-select: none; -webkit-user-select: none;/* Safari */ -moz-user-select: none;/* Firefox */ -ms-user-select: none;/* IE/Edge */}
+.rsII{ font-size: 2vw; filter:url(#minFilter); text-align: center; user-select: none; -webkit-user-select: none;/* Safari */ -moz-user-select: none;/* Firefox */ -ms-user-select: none;/* IE/Edge */}
 .rsII-portrait{ font-size: 2vw; filter:url(#minFilter); text-align: center; visibility: hidden;}
 .rsIIsub{ position: absolute; left: 50%; transform-origin: center; transform: translateX(-50%); width: 220px; display: flex;align-items: center; justify-content: space-between;}
 .arrow-loop { width: 100px; height: 5px; position: relative; margin-top: 50px; margin-left: 10px; }
@@ -50,8 +50,8 @@ a{text-decoration:none;color:var(--color-link);outline:none;}a:hover{color:#ffa6
 .content{grid-area:1/1/2/2;display:grid;place-items:center;width:100%;height:100%;}
 .content__title{position:absolute;bottom:5%;left:50%;transform:translate(-50%,0%);color:#fff;font-size:3vw;font-weight:600;text-transform:uppercase;white-space:nowrap;filter:url(#minFilter);}
 .content:nth-child(even) .content__title{font-weight:100;font-style:italic;font-family:'LEMONMILK-Regular',heimat-display-14,sans-serif;}
-.content__title .char{will-change:transform,opacity;}
-.content__text{ color: #fff; width:80%;margin:0 auto;position:absolute;top:20%;left:50%;transform:translate(-50%,-50%);display:flex;justify-content:center;align-items:center;align-self:center;text-align:center;font-size:1.5rem;will-change:opacity,transform;filter:url(#minFilter);}
+.content__title .char{will-change:transform,opacity; user-select: none; -webkit-user-select: none;/* Safari */ -moz-user-select: none;/* Firefox */ -ms-user-select: none;/* IE/Edge */}
+.content__text{ color: #fff; width:80%;margin:0 auto;position:absolute;top:20%;left:50%;transform:translate(-50%,-50%);display:flex;justify-content:center;align-items:center;align-self:center;text-align:center;font-size:1.5rem;will-change:opacity,transform;filter:url(#minFilter); user-select: none; -webkit-user-select: none;/* Safari */ -moz-user-select: none;/* Firefox */ -ms-user-select: none;/* IE/Edge */}
 .content__text::after{content:'';position:fixed;pointer-events:none;width:100%;height:100%;top:0;left:0;z-index:1;}
 .close{color:#fff;cursor:pointer;line-height:1;opacity:0;pointer-events:none;position:absolute;top:0.65rem;font-weight:500;right:1rem;z-index:150;text-transform:uppercase;}
 .close:hover,.close:focus{color:#ffa666;}
@@ -62,8 +62,8 @@ a{text-decoration:none;color:var(--color-link);outline:none;}a:hover{color:#ffa6
 
 /* Filters */
 .max-txt-trial, .min-txt-trial {position: absolute; left: 0; bottom: 0; width: 100vw; height: 100vh; }
-.max-txt-trial text {font-family: 'LEMONMILK-Regular', 'Roboto', sans-serif; font-size: 10vw; letter-spacing: -20px;}
-.min-txt-trial text {font-family: 'LEMONMILK-Regular', 'Roboto', sans-serif; font-size: 1vw; letter-spacing: 20px;}
+.max-txt-trial text {font-family: 'LEMONMILK-Regular', 'Roboto', sans-serif; font-size: 10vw; letter-spacing: -20px; user-select: none; -webkit-user-select: none;/* Safari */ -moz-user-select: none;/* Firefox */ -ms-user-select: none;/* IE/Edge */}
+.min-txt-trial text {font-family: 'LEMONMILK-Regular', 'Roboto', sans-serif; font-size: 1vw; letter-spacing: 20px; user-select: none; -webkit-user-select: none;/* Safari */ -moz-user-select: none;/* Firefox */ -ms-user-select: none;/* IE/Edge */}
 
 /* Trial */
 .trail-container {position: relative; width: 100vw; height: 100vh; display: flex; justify-content: center; align-items: center; overflow: hidden;}
@@ -74,12 +74,19 @@ a{text-decoration:none;color:var(--color-link);outline:none;}a:hover{color:#ffa6
 .trail-container:hover .marquee-trial-II {transform: translateY(0em);}
 .marquee-trial { position: absolute; bottom: 0%; width: 100%; margin: 0 auto; padding: 0.2em 0; white-space: nowrap; overflow: hidden; z-index: 3; background: #111; display: flex; align-items: center; transform: translateY(10em); transition: transform 0.5s ease-in-out;}
 .marquee-trial-content { display: inline-block; white-space: nowrap; animation: marqueeAnim 60s linear infinite; }
-.marquee-trial-content span { font-family: 'Narnia', 'LEMONMILK-Regular', 'Roboto', sans-serif; text-transform: uppercase; font-weight: 300; color: #eee; font-size: 4em; display: inline-block; padding-right: 2rem; filter: url(#minFilter); } 
+.marquee-trial-content span { font-family: 'Narnia', 'LEMONMILK-Regular', 'Roboto', sans-serif; text-transform: uppercase; font-weight: 300; color: #eee; font-size: 4em; display: inline-block; padding-right: 2rem; filter: url(#minFilter); user-select: none; -webkit-user-select: none;/* Safari */ -moz-user-select: none;/* Firefox */ -ms-user-select: none;/* IE/Edge */} 
 .marquee-trial-II { position: absolute; top: 0%; width: 100%; margin: 0 auto; padding: 0.2em 0; white-space: nowrap; overflow: hidden; z-index: 3; background: #111; display: flex; align-items: center; transform: translateY(-10em); transition: transform 0.5s ease-in-out;}
 .marquee-trial-content-II { display: inline-block; white-space: nowrap; animation: marqueeAnimII 60s linear infinite; }
-.marquee-trial-content-II span { font-family: 'Narnia', 'LEMONMILK-Regular', 'Roboto', sans-serif; text-transform: uppercase; font-weight: 300; color: #eee; font-size: 4em; display: inline-block; padding-right: 2rem; filter: url(#minFilter); }
+.marquee-trial-content-II span { font-family: 'Narnia', 'LEMONMILK-Regular', 'Roboto', sans-serif; text-transform: uppercase; font-weight: 300; color: #eee; font-size: 4em; display: inline-block; padding-right: 2rem; filter: url(#minFilter); user-select: none; -webkit-user-select: none;/* Safari */ -moz-user-select: none;/* Firefox */ -ms-user-select: none;/* IE/Edge */}
 @keyframes marqueeAnim { 0% { transform: translateX(0%); } 100% { transform: translateX(-50%); } }
 @keyframes marqueeAnimII { 0% { transform: translateX(-50%); } 100% { transform: translateX(0%); } }
+
+@media (orientation: portrait) {
+  .rotate-on-portrait {
+    transform: rotate(90deg);
+    transform-origin: center center; /* Optional: adjust rotation pivot */
+  }
+}
 
 @media screen and (max-width:500px){
 
@@ -90,7 +97,7 @@ a{text-decoration:none;color:var(--color-link);outline:none;}a:hover{color:#ffa6
   .menu__item {font-size: 2rem;}
   .menu__item::before{top:40%;bottom:40%;}
   .content__title{font-size: 2.5rem;}
-  .content__text{font-size: 1rem; top: 50%;}
+  .content__text{font-size: 1rem; top: 33%;}
 
   .inversion-lens{width:80vw; bottom:5%; right:10vw; transform:translate(0%,25%); transform-origin: center; }
   .rss {font-size: .9rem;}
@@ -108,9 +115,9 @@ a{text-decoration:none;color:var(--color-link);outline:none;}a:hover{color:#ffa6
 
 }
 
-@media (orientation: portrait) {
-  .rotate-on-portrait {
-    transform: rotate(90deg);
-    transform-origin: center center; /* Optional: adjust rotation pivot */
-  }
+@media (max-width: 500px) and (max-height: 800px) {
+    .main { height: 33vh;}
+    .menu__item { font-size: 1.5rem; }
+    .menu__item:nth-child(even) { font-weight: 100; color: #eee;}
+    .inversion-lens { height: 33vh;}
 }
