--- a/studio/css/styles.css
+++ b/studio/css/styles.css
@@ -122,4 +122,5 @@ a{text-decoration:none;color:var(--color-link);outline:none;}a:hover{color:#ffa6
     .content__text { font-size: .75rem; }
 
     .inversion-lens { height: 33vh;}
+    .rss{font-size: .7rem;}
 }
