--- a/brands/css/base.css
+++ b/brands/css/base.css
@@ -36,42 +36,6 @@ body {
 body::before { content: ''; position: fixed; top: -100%; left: -50%; width: 300%; height: 300%; background-image: url(../../assets/noiseW.png); opacity: 1; animation: grain 3s steps(10) infinite; }
 @keyframes grain { 0%, 100% { transform: translate(0, 0); } 10% { transform: translate(-5%, -10%); } 20% { transform: translate(-15%, 5%); } 30% { transform: translate(7%, -25%); } 40% { transform: translate(-5%, 25%); } 50% { transform: translate(-15%, 10%); } 60% { transform: translate(15%, 0%); } 70% { transform: translate(0%, 15%); } 80% { transform: translate(3%, 35%); } 90% { transform: translate(-10%, 10%); } }
 
-/* Page Loader */
-.js .loading::before {
-	content: '';
-	position: fixed;
-	z-index: 100000;
-	top: 0;
-	left: 0;
-	width: 100%;
-	height: 100%;
-	background: var(--color-bg);
-}
-
-.js .loading::after {
-	content: '';
-	position: fixed;
-	z-index: 100000;
-	top: 50%;
-	left: 50%;
-	width: 60px;
-	height: 60px;
-	margin: -30px 0 0 -30px;
-	pointer-events: none;
-	border-radius: 50%;
-	opacity: 0.4;
-	background: var(--color-link);
-	animation: loaderAnim 0.7s linear infinite alternate forwards;
-}
-
-@keyframes loaderAnim {
-	to {
-		opacity: 1;
-		transform: scale3d(0.5,0.5,1);
-	}
-}
-
-
 a {
 	text-decoration: none;
 	color: var(--color-link);
@@ -261,7 +225,7 @@ a.content__text-link[data-fx="14"]:hover::after {
 }
 
 
-.footer{position:relative;display:flex;flex-direction:column;flex-wrap:wrap;align-items:center;width:100vw; background:#000;color:#f1f1f1; padding:0 0 1rem; overflow: hidden;}.footer a{color:#f1f1f1;text-decoration:none;margin:0 1rem;}.foot-link{display:flex; /*flex-direction:column;*/ justify-content: space-around; width: 100%;}.foot-link a{display:flex;justify-content:space-around;align-items:center;width:100%;padding:0.5em;/*margin:0.5rem;*/border-radius:1rem;color:#f1f1f1;text-decoration:none;}.foot-copy{width:100%;text-align:center;margin:0rem 0;font-size:10rem;letter-spacing:-2px;line-height:0.9em;}
+.footer{position:relative;display:flex;flex-direction:column;flex-wrap:wrap;align-items:center;width:100vw; background:transparent;color:#f1f1f1; padding:0 0 1rem; overflow: hidden;}.footer a{color:#f1f1f1;text-decoration:none;margin:0 1rem;}.foot-link{display:flex; /*flex-direction:column;*/ justify-content: space-around; width: 100%;}.foot-link a{display:flex;justify-content:space-around;align-items:center;width:100%;padding:0.5em;/*margin:0.5rem;*/border-radius:1rem;color:#f1f1f1;text-decoration:none;}.foot-copy{width:100%;text-align:center;margin:0rem 0;font-size:10rem;letter-spacing:-2px;line-height:0.9em;}
 .linethrough{margin-bottom: 3px; width: 100vw; display:flex; justify-content: space-around;} .linethrough a{text-decoration:line-through;} .top-plus{margin-top:0;} .tm{font-family:'Noto Sans KR',sans-serif;}
 .foot-link-II span {position: relative; z-index: 1; font-size:2rem;}.foot-link-II span::before {content: ''; position: absolute; z-index: -1; top: 0; bottom: 0; left: -0.25em; right: -0.25em; background-color: #ffa666; transform-origin: center right; transform: scaleX(0); transition: transform 0.2s ease-in-out;} .foot-link-II span:hover::before { transform: scaleX(1); transform-origin: center left;}
 .foot-link-III span {position: relative; z-index: 1; font-size:1vw;}.foot-link-III span::before {content: ''; position: absolute; z-index: -1; top: 0; bottom: 0; left: -0.25em; right: -0.25em; background-color: #ffa666; transform-origin: center right; transform: scaleX(0); transition: transform 0.2s ease-in-out;} .foot-link-III span:hover::before { transform: scaleX(1); transform-origin: center left;}
@@ -326,3 +290,25 @@ a.content__text-link[data-fx="14"]:hover::after {
         overflow-x: hidden; /* Force prevent horizontal scroll */
     }
 }
+
+@media (max-width: 500px) {
+  .hover-reveal {
+    left: 50% !important;
+    transform: translateX(-50%) !important;
+    top: auto !important;
+    bottom: 20px !important; /* or use top: 50% if you want it vertically centered */
+    position: fixed !important; /* ensures it stays in place */
+  }
+}
+
+/* Loader CSS */
+.loading{display:flex;align-items:center;justify-content:center;position:fixed;top:0;right:0;bottom:0;left:0;z-index:100; background:#ffa666; opacity:0; transition:0.5s;}
+.loading::before { content: ''; position: fixed; top: -100%; left: -50%; width: 300%; height: 300%; background-image: url(../../assets/noise.png); opacity: 1; animation: grain 3s steps(10) infinite; }
+@keyframes grain { 0%, 100% { transform: translate(0, 0); } 10% { transform: translate(-5%, -10%); } 20% { transform: translate(-15%, 5%); } 30% { transform: translate(7%, -25%); } 40% { transform: translate(-5%, 25%); } 50% { transform: translate(-15%, 10%); } 60% { transform: translate(15%, 0%); } 70% { transform: translate(0%, 15%); } 80% { transform: translate(3%, 35%); } 90% { transform: translate(-10%, 10%); } }
+.before-load .loading{opacity:1;}
+.backp { position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%);color: #000; font-family: 'Morbid Bones Brush Slant DEMO','LEMONMILK-Regular','Roboto',sans-serif; font-size: 7rem; cursor: pointer; width: fit-content; filter: url(#minFilter); }
+.backp::before { content: ''; position: absolute; z-index: 1; top: 45%; bottom: 45%; left: -0.25em; right: -0.25em; background-color: #eee; border: 3px solid #000; filter: url(#minFilter); animation: fullSweep 2s ease-in-out infinite; }
+@keyframes fullSweep { 0% { transform-origin: left; transform: scaleX(0); } 33.333% { transform-origin: left; transform: scaleX(1); } 33.334% { transform-origin: right; transform: scaleX(1); } 66.666% { transform-origin: right; transform: scaleX(0); } 100% { transform-origin: right; transform: scaleX(0); } }
+@media (max-width:500px) { .backp { font-size: 3rem; } .backp::before {top: 33%; bottom: 33%;}}
+@font-face{font-family:'Morbid Bones Brush Slant DEMO';src:url('../../assets/Morbid\ Bones\ Brush\ Slant\ DEMO.ttf') format('truetype');font-display:swap;}
+.max-txt {position: absolute; top: 0; z-index: -1;}
