--- a/cars/css/base.css
+++ b/cars/css/base.css
@@ -265,7 +265,7 @@ a.content__text-link[data-fx="6"]:hover::after {
 }
 
 /* Loader CSS */
-.loading{display:flex;align-items:center;justify-content:center;position:fixed;top:0;right:0;bottom:0;left:0;z-index:100; background:#ffa666; opacity:0; transition:0.5s;}
+.loading{display:flex;align-items:center;justify-content:center; width:100vw; height:100vh; position:fixed; top:0; right:0; z-index:100; background:#ffa666; opacity:0; transition:0.5s;}
 .loading::before { content: ''; position: fixed; top: -100%; left: -50%; width: 300%; height: 300%; background-image: url(../../assets/noise.png); opacity: 1; animation: grain 3s steps(10) infinite; }
 @keyframes grain { 0%, 100% { transform: translate(0, 0); } 10% { transform: translate(-5%, -10%); } 20% { transform: translate(-15%, 5%); } 30% { transform: translate(7%, -25%); } 40% { transform: translate(-5%, 25%); } 50% { transform: translate(-15%, 10%); } 60% { transform: translate(15%, 0%); } 70% { transform: translate(0%, 15%); } 80% { transform: translate(3%, 35%); } 90% { transform: translate(-10%, 10%); } }
 .before-load .loading{opacity:1;}
