--- a/store/styles.css
+++ b/store/styles.css
@@ -133,8 +133,11 @@ img { width: 100%; height: 250px; object-fit: cover; }
   position: fixed;
   bottom: 15px;
   right: 15px;
-  width: 30%;
-  height: 30%;
+  aspect-ratio: 16/9;
+  width: 33vw;
+  height: auto;
+  object-fit: cover;
+  overflow: hidden;
   z-index: 999999;
 }
 .award-preview img {
@@ -366,13 +369,18 @@ img { width: 100%; height: 250px; object-fit: cover; }
     font-size: 1rem;
     font-weight: 800;
   }
-    .award-preview {
+  .award-preview {
     position: fixed;
-    bottom: 2%;
+    bottom: 3%;
     right: 10%;
     width: 80%;
-    height: 20%;
   }
+
+  .award-preview img{
+    width: 100%;
+    height: 100%;
+  }
+
   .screen { width: 444px; aspect-ratio: 9 / 16; top: 40%;}
   .foot-copy{font-size: 12vw;}
   .foot-link-III span {font-size: 4vw;}
@@ -495,3 +503,19 @@ body.menu-open{overflow:hidden;}
 .marquee-menu span{font-style:italic;}
 @keyframes marquee-menu{0%{transform:translate3d(var(--move-initial), 0, 0);}100%{transform:translate3d(var(--move-final), 0, 0);}}
 @media (max-width:500px){.menu__item-link, .marquee-menu span{white-space:nowrap;font-size:15vw;padding:0 1vw;font-weight:900;line-height:1.15;}.menu-bt{top:1rem;right:2rem;}#menu-toggle{font-size:8vw;}.menu__item-link::before{font-size:5vw;left:-5%;}#menu-toggle img{width:10vw;height:10vw;}.aro{height:50px;width:50px;}}
+@media (max-width: 500px) and (max-height: 800px) {
+  .foot-copy {visibility: hidden;}
+  .screen {top: 50%;}
+}
+
+/* Loader CSS */
+@font-face{font-family:'Morbid Bones Brush Slant DEMO';src:url('../assets/Morbid\ Bones\ Brush\ Slant\ DEMO.ttf') format('truetype');font-display:swap;}
+.loading{display:flex;align-items:center;justify-content:center;position:fixed;top:0;right:0;bottom:0;left:0;z-index:100; background:#ffa666; opacity:0; transition:0.5s;}
+.loading::before { content: ''; position: fixed; top: -100%; left: -50%; width: 300%; height: 300%; background-image: url(./assets/noise.png); opacity: 1; animation: grain 3s steps(10) infinite; }
+@keyframes grain { 0%, 100% { transform: translate(0, 0); } 10% { transform: translate(-5%, -10%); } 20% { transform: translate(-15%, 5%); } 30% { transform: translate(7%, -25%); } 40% { transform: translate(-5%, 25%); } 50% { transform: translate(-15%, 10%); } 60% { transform: translate(15%, 0%); } 70% { transform: translate(0%, 15%); } 80% { transform: translate(3%, 35%); } 90% { transform: translate(-10%, 10%); } }
+.before-load .loading{opacity:1;}
+.backp { position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); font-family: 'Morbid Bones Brush Slant DEMO','LEMONMILK-Regular','Roboto',sans-serif; font-size: 7rem; font-weight: 500; cursor: pointer; width: fit-content; filter: url(#minFilter); }
+.backp::before { content: ''; position: absolute; z-index: 1; top: 45%; bottom: 45%; left: -0.25em; right: -0.25em; background-color: #eee; border: 3px solid #000; filter: url(#minFilter); animation: fullSweep 2s ease-in-out infinite; }
+@keyframes fullSweep { 0% { transform-origin: left; transform: scaleX(0); } 33.333% { transform-origin: left; transform: scaleX(1); } 33.334% { transform-origin: right; transform: scaleX(1); } 66.666% { transform-origin: right; transform: scaleX(0); } 100% { transform-origin: right; transform: scaleX(0); } }
+@media (max-width:500px) { .backp { font-size: 2rem; } .backp::before {top: 33%; bottom: 33%;}}
+.max-txt {position: absolute; top: 0; z-index: -1;}
