--- a/store/cars/styles.css
+++ b/store/cars/styles.css
@@ -4,9 +4,9 @@
   box-sizing: border-box;
 }
 
-body { font-family: 'LEMONMILK-Regular', 'Roboto', sans-serif; }
+body { font-family: 'LEMONMILK-Regular', 'Roboto', sans-serif; overflow: hidden;}
 
-@font-face{font-family:'LEMONMILK-Regular';src:url('../../../LEMONMILK-Regular.otf') format('opentype');font-display:swap;}
+@font-face{font-family:'LEMONMILK-Regular';src:url('../../assets/LEMONMILK-Regular.otf') format('opentype');font-display:swap;}
 
 
 img {
@@ -15,6 +15,11 @@ img {
   object-fit: cover;
   transition: opacity 0.2s;
   user-select: none;
+}
+
+h1 {
+    font-size: 2em;
+    font-weight: normal;
 }
 
 p {
@@ -40,20 +45,21 @@ p {
   transform: translate(-50%, -50%);
   max-width: 480px;
   height: fit-content;
-  gap: 20px;
+  gap: 4px;
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
+  justify-content: center;
   align-items: center;
   z-index: 3;
+  mix-blend-mode: difference;
 
 }
 .car-details {
-  padding: 1.5em;
-  background-color: #111;
+  padding: 1em;
+  background-color: transparent;
   color: #eee;
-  border: 4px solid #eee;
-  box-shadow: 0 0 0 2px #000000;
+  border: 2px solid #eee;
+  box-shadow: 0 0 0 1px #000000;
   backdrop-filter: blur(8px);
   border-radius: 0px;
   opacity: 0;
@@ -70,27 +76,20 @@ p {
   color: #111;
 }
 
-.car a{ width: 100%; text-decoration: none; }
+.car a{text-decoration: none; }
 
 .car-order {
   display: flex;
   align-items: center;
-  justify-content: center;
+  justify-content: space-between;
+  gap: 4px;
   width: 100%;
   height: fit-content;
-  padding: .5em;
-  background-color: #111;
-  color: #eee;
-  border: 4px solid #eee;
-  box-shadow: 0 0 0 2px #000000;
-  backdrop-filter: blur(8px);
-  border-radius: 0px;
-  cursor: pointer;
+  background-color: transparent;
   opacity: 0;
   transform: translateY(30px);
   animation: revealButton 1s ease-in-out forwards;
   animation-delay: 0.5s;
-  transition: color 0.3s ease-in-out, background-color 0.3s ease-in-out;
 }
 @keyframes revealButton {
   to {
@@ -98,11 +97,35 @@ p {
     transform: translateY(0);
   }
 }
-.car-order:hover {
+
+.car-order-w, .car-order-t {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 50%;
+  height: fit-content;
+  padding: .5em;
+  background-color: transparent;
+  font-size: .6rem;
+  color: #eee;
+  border: 2px solid #eee;
+  box-shadow: 0 0 0 1px #000000;
+  backdrop-filter: blur(8px);
+  border-radius: 0px;
+  cursor: pointer;
+  transition: color 0.3s ease-in-out, background-color 0.3s ease-in-out;
+}
+
+.car-order-w:hover {
   background-color: #eee;
   color: #111;
 }
-.wa { color: #eee; transition: color 0.3s ease-in-out; }
+.car-order-t:hover {
+  background-color: #eee;
+  color: #111;
+}
+
+.wa { color: #eee; }
 .car-order:hover .wa{ color: #111; }
 
 .car-details.show {
@@ -114,7 +137,7 @@ p {
 .car-details h1 {
   font-size: 2em;
   margin-bottom: 0.25em;
-  font-weight: 700;
+  font-weight: 600;
 }
 
 .car-details .car-year,
@@ -144,8 +167,11 @@ p {
   top: 50%;
   left: 60%;
   transform: translate(-50%, -50%);
+  aspect-ratio: 16/9;
   width: 50%;
-  height: 75%;
+  height: auto;
+  border: 4px solid transparent;
+  box-shadow: 0 0 0 2px #000000;
   overflow: hidden;
   z-index: 2;
 }
@@ -156,8 +182,32 @@ p {
   left: 50%;
   transform: translate(-50%, -50%);
   width: 100%;
+  height: auto;
+  object-fit: contain;
+}
+
+.img-preview video {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 100%;
+  height: auto;
+  object-fit: contain;
+  display: none;
+  pointer-events: none;
+}
+
+.img-preview iframe {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 100%;
   height: 100%;
   object-fit: contain;
+  display: none;
+  /*pointer-events: none;*/
 }
 
 .minimap {
@@ -165,6 +215,7 @@ p {
   top: 50%;
   right: 8em;
   width: 80px;
+  z-index: 2;
 }
 
 .indicator {
@@ -274,26 +325,26 @@ body::before {animation:grain 8s steps(10) infinite;background-image:url(../../a
   top: 33%;
   left: 50%;
   max-width: 400px;
-  gap: 10px;
+  gap: 4px;
 }
   .car-details {
   height:fit-content;
   width: 350px;
   padding: .5em;
-  border: 4px solid #eee;
+  border: 2px solid #eee;
 }
-.car-order {
-  border: 4px solid #eee;
+.car-order a{
   padding: .2em;
   animation-delay: 0.5s;
-  transition: color 0.3s ease-in-out, background-color 0.3s ease-in-out;
+  font-size: 1rem;
 }
+
 .model-name {font-size: 1em;}
 .img-preview {
   top: 70%;
   left: 50%;
   width: 75%;
-  height: 33%;   
+  height: auto;   
 }
 .minimap {
   top: auto;
@@ -309,3 +360,38 @@ body::before {animation:grain 8s steps(10) infinite;background-image:url(../../a
   top: 55%;
 }
 }
+
+@media (max-width: 500px) and (max-height: 800px) {
+  .minimap {
+  bottom: 2em;
+  }
+  .car-order a{
+  font-size: 1rem;
+  }
+  .car-details {
+  font-size: .8rem;
+  }
+  .car-details h1 {
+        font-size: 1.2em;
+  }
+  .car-details .car-specs {
+    margin-top: 0.2em;
+    line-height: 1.5em;
+  }
+  .car-details .car-highlight {
+    font-size: .8rem;
+    margin-top: 0.2em;
+    font-style: italic;
+  }
+}
+
+/* Loader CSS */
+@font-face{font-family:'Morbid Bones Brush Slant DEMO';src:url('../../assets/Morbid\ Bones\ Brush\ Slant\ DEMO.ttf') format('truetype');font-display:swap;}
+.loading{display:flex;align-items:center;justify-content:center;position:fixed;top:0;right:0;bottom:0;left:0;z-index:100; background:#ffa666; opacity:0; transition:0.5s;}
+.loading::before { content: ''; position: fixed; top: -100%; left: -50%; width: 300%; height: 300%; background-image: url(../../assets/noise.png); opacity: 1; animation: grain 3s steps(10) infinite; }
+@keyframes grain { 0%, 100% { transform: translate(0, 0); } 10% { transform: translate(-5%, -10%); } 20% { transform: translate(-15%, 5%); } 30% { transform: translate(7%, -25%); } 40% { transform: translate(-5%, 25%); } 50% { transform: translate(-15%, 10%); } 60% { transform: translate(15%, 0%); } 70% { transform: translate(0%, 15%); } 80% { transform: translate(3%, 35%); } 90% { transform: translate(-10%, 10%); } }
+.before-load .loading{opacity:1;}
+.backp { position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); font-family: 'Morbid Bones Brush Slant DEMO','LEMONMILK-Regular','Roboto',sans-serif; font-size: 7rem; font-weight: 500; cursor: pointer; width: fit-content; filter: url(#minFilter); }
+.backp::before { content: ''; position: absolute; z-index: 1; top: 45%; bottom: 45%; left: -0.25em; right: -0.25em; background-color: #eee; border: 3px solid #000; filter: url(#minFilter); animation: fullSweep 2s ease-in-out infinite; }
+@keyframes fullSweep { 0% { transform-origin: left; transform: scaleX(0); } 33.333% { transform-origin: left; transform: scaleX(1); } 33.334% { transform-origin: right; transform: scaleX(1); } 66.666% { transform-origin: right; transform: scaleX(0); } 100% { transform-origin: right; transform: scaleX(0); } }
+@media (max-width:500px) { .backp { font-size: 2rem; } .backp::before {top: 33%; bottom: 33%;}}
